<resources>
    <string name="app_name">PictureSnap</string>
    <string name="search">Search</string>
    <string name="review">Overview</string>
    <string name="dev">Ruslan Lyaschenko</string>

    <string name="photographer_fragment_home">Home</string>
    <string name="unregistered_fragment_home">Home</string>
    <string name="client_fragment_home">Home</string>
    <string name="previous">Previous</string>

    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="favorite">Favourite</string>
    <string name="welcome">Welcome!</string>
    <string name="booking_selection">Choice of service, date and time</string>

    <string name="user_solution_title">Decision for you</string>
    <string name="user_solution">In the application it is possible registration of both clients and photographers who can share with his creativity.</string>
    <string name="data_view_and_notifications">Data View and Notifications</string>
    <string name="confidential_and_secure">Confidential and secure</string>
    <string name="passwords_and_notifications">Your passwords and messages are protected encryption.</string>
    <string name="notifications_moment">You will be notified at the moment events (new booking, new message from the user).</string>

    <string name="sign_out_confirmation">Are you sure you want to log out of your account?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="authorization">Authorization</string>
    <string name="overview">Overview</string>

    <string name="email" translatable="false">Email</string>
    <string name="necessarily">Necessarily</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="i_am_client">I am client</string>
    <string name="i_am_photographer">I am photographer</string>
    <string name="keep_in_safe_place">Keep password in a safe place!</string>

    <string name="retry">Try again</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="connect_device">Connect your device and try again.</string>
    <string name="bank_card_link">Linking a card</string>
    <string name="bank_card">Card</string>

    <string name="bank_card_number">Card number</string>
    <string name="save">Save</string>
    <string name="month_and_year">Month/Year</string>
    <string name="CVC_CVV" translatable="false">CVC/CVV</string>
    <string name="next">Next</string>
    <string name="password_recovery">Password recovery</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_code">Enter code</string>
    <string name="code">Code</string>
    <string name="new_password">New password</string>
    <string name="sent_code">We sent code to email</string>
    <string name="creating_new_password">Creating a new password</string>
    <string name="ready">Ready</string>
    <string name="write">Write</string>
    <string name="book">Book</string>
    <string name="work_days">Working days</string>
    <string name="ratings_and_feedbacks">Ratings and reviews</string>
    <string name="portfolio">Portfolio</string>
    <string name="about_photographer">About photographer</string>
    <string name="services">Services</string>

    <string name="leave">Leave</string>
    <string name="report">Report</string>
    <string name="edit_name">Edit name</string>
    <string name="link_card">Link card</string>
    <string name="change_password">Change password</string>
    <string name="login_account">Log in to book your photoshoot</string>
    <string name="menu">Menu</string>
    <string name="client_registration">Client registration</string>
    <string name="contract">By clicking on the \"Signup\" button, you agree to the processing of personal data.</string>
    <string name="city">City</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="service_selection">Service selection</string>
    <string name="service_select">Select service</string>
    <string name="hours_select">Hours select</string>
    <string name="datetime_selection">Date and time selection</string>
    <string name="date_selection">Select date</string>
    <string name="total">Total</string>
    <string name="time_selection">Select time</string>
    <string name="send">Send</string>
    <string name="feedback">Feedback</string>
    <string name="Ok">OK</string>
    <string name="description">Description</string>
    <string name="describe_feedback">Briefly describe the quality of services of the master</string>
    <string name="photographer_signup">Sign up - photographer</string>
    <string name="address">Address</string>
    <string name="select_address">Choose an address on the map</string>
    <string name="phone">Phone</string>
    <string name="days">Days</string>
    <string name="select_working_days">Select working days</string>
    <string name="experience">Experience</string>
    <string name="one_year">1 year</string>
    <string name="two_years">2 years</string>
    <string name="three_years">3 years</string>
    <string name="four_years">4 years</string>
    <string name="five_years">5 years</string>
    <string name="more_five_years">> 5 years</string>
    <string name="about_me">About me</string>
    <string name="write_about_you">Write briefly about yourself</string>
    <string name="select_services">Select services</string>
    <string name="working_days_selection">Working days selection</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="zero_time" translatable="false">00:00</string>
    <string name="double_point" translatable="false">:</string>
    <string name="photoshoot_time_addition">If you don\'t plan to shoot on a specific day, just set the time from 00:00 to 00:00.</string>
    <string name="services_selection">Services selection</string>
    <string name="family_photo_session">Family photo session</string>
    <string name="portrait_photo_session">Portrait photo session</string>
    <string name="children_photo_session">Children\'s photo session</string>
    <string name="advertising_photo_session">Advertising photo session</string>
    <string name="subject_photo_session">Subject photo session</string>
    <string name="studio_photo_session">Studio photo session</string>
    <string name="pregnant_woman_photo_session">Pregnant woman photo session</string>
    <string name="rub_per_hour">rub/h</string>
    <string name="zero" translatable="false">0</string>
    <string name="services_addition">If you do not plan to conduct photo shoots for a particular service, simply set the price for it at 0 rubles per hour.</string>
    <string name="notifications">Notifications</string>
    <string name="upcoming_entries">Upcoming entries</string>
    <string name="developing">In developing</string>
    <string name="not_signed">Log in or register to make it easier for you to search for photographers.</string>
    <string name="my_records">My records</string>
    <string name="photographers_in_your_city">Photographers in your city</string>
    <string name="you_selected">You selected: </string>
    <string name="clients_records">Clients records</string>
    <string name="yandex_maps">Yandex Maps</string>
    <string name="photo_session_address">Photo session address</string>
    <string name="accepted">Accepted</string>
    <string name="pending">Pending</string>
    <string name="denied">Denied</string>
    <string name="photographer">Photographer</string>
    <string name="address_selection">Address selection</string>
    <string name="search_found">Search: </string>
    <string name="settings">Settings</string>
    <string name="city_data_not_received">City data not received</string>
    <string name="time_separator" translatable="false">-</string>
    <string name="out_of_5">out of 5</string>
    <string name="fill_input">Fill in the input fields</string>
    <string name="confirm_password">Confirm password</string>
    <string name="passwords_not_equals">Passwords not equals</string>
    <string name="address_example">Moscow, Prospekt Vernadskogo, 74</string>
    <string name="invalid_address">Invalid address</string>
    <string name="select_service_prices">Choose prices for services</string>
    <string name="no_feedbacks">No feedbacks</string>
    <string name="nothing_here">There is nothing here yet…</string>
    <string name="wrong_data">Wrong data</string>
    <string name="prices_selected">Prices selected</string>
    <string name="wrong_enter_phone_number">Phone number entered incorrectly</string>
    <string name="wrong_enter_email">Email entered incorrectly</string>
    <string name="short_password">Short password</string>
    <string name="invalid_first_name">Invalid first name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="user_already_exists">User already exists</string>
    <string name="user_not_found">User not found</string>
    <string name="wrong_password">Wrong password</string>
    <string name="password_recover_sent">Recovery sent to your email</string>
    <string name="user_with_this_email_not_exists">User with this email does not exist</string>
    <string name="photographers_absent">No photographers with this service</string>
    <string name="write_feedback"> Write feedback</string>
    <string name="incorrect_feedback">Incorrect feedback</string>
    <string name="comment">Comment</string>
    <string name="not_necessarily">Not necessarily</string>
    <string name="date_is_not_valid">Date is not valid</string>

    <string name="cancel">Cancel</string>
    <string name="time_is_not_selected">Time is not selected</string>
    <string name="book_successfully">Congratulations, you have booked a service!</string>
    <string name="ratings_count">ratings</string>
    <string name="accept">Accept</string>
    <string name="dismiss">Dismiss</string>
    <string name="confirm_action">Confirm action</string>

    <string name="accept_record">Are you sure you want to accept your photo session?</string>

    <string name="cancel_photo_session">Are you sure you want to cancel your photo session?</string>
    <string name="loading">Loading…</string>

</resources>