<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="navigation_view"
    tools:context=".presentation.fragments.client.ClientNavMenu">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite"/>

        <item
            android:id="@+id/nav_records"
            android:icon="@drawable/ic_check_mark"
            android:title="@string/my_records"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:title="@string/leave"
                android:icon="@drawable/ic_logout"/>
        </menu>

    </item>

</menu>