<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/rect_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_email"
        style="@style/textField"

        app:drawableStartCompat="@drawable/ic_email"
        tools:text="email@gmail.com" />

    <View style="@style/fieldSeparator" />

    <TextView
        android:id="@+id/textView_location"
        style="@style/textField"

        app:drawableEndCompat="@drawable/ic_keyboard_arrow_right"
        app:drawableStartCompat="@drawable/ic_location_on"
        android:text="@string/loading" />

    <View style="@style/fieldSeparator" />

    <TextView
        android:id="@+id/textView_services"
        style="@style/textField"

        android:text="@string/services"
        app:drawableEndCompat="@drawable/ic_keyboard_arrow_top"
        app:drawableStartCompat="@drawable/ic_services" />

    <View style="@style/fieldSeparator" />

    <TextView
        android:id="@+id/textView_photographer"
        style="@style/textField"

        android:text="@string/about_photographer"
        app:drawableEndCompat="@drawable/ic_keyboard_arrow_right"
        app:drawableStartCompat="@drawable/ic_description" />

    <View style="@style/fieldSeparator" />

    <TextView
        android:id="@+id/textView_portfolio"
        style="@style/textField"

        android:text="@string/portfolio"
        app:drawableEndCompat="@drawable/ic_keyboard_arrow_right"
        app:drawableStartCompat="@drawable/ic_portfolio" />

    <View style="@style/fieldSeparator" />

    <RelativeLayout
        android:id="@+id/relativeLayout_reviews"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_feedbacks"
            style="@style/textField"
            android:layout_width="match_parent"

            android:layout_alignParentStart="true"

            android:text="@string/ratings_and_feedbacks"
            app:drawableStartCompat="@drawable/ic_reviews" />

        <TextView
            android:id="@+id/textView_rating"
            style="@style/textField"

            android:layout_width="wrap_content"
            app:drawableEndCompat="@drawable/ic_keyboard_arrow_right"

            android:layout_alignParentEnd="true"

            tools:text="5/5"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>