<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView_service_name"
        style="@style/textField"

        android:width="140dp"

        tools:text="@string/family_photo_session"
        android:singleLine="false"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:gravity="center"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editText_price"
            style="@style/selectionInputField"

            android:autofillHints=""
            android:hint="@string/zero"

            android:inputType="numberDecimal"

            android:maxWidth="100dp"
            android:minWidth="60dp"

            android:minHeight="48dp"

            android:singleLine="true"
            android:textAlignment="center" />

        <TextView
            style="@style/standardText"

            android:layout_marginStart="10dp"

            android:text="@string/rub_per_hour" />

    </LinearLayout>

</LinearLayout>