<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView_day_name"
        style="@style/textField"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:width="140dp"
        android:text="@string/monday" />

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            tools:text="@string/zero_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="10dp"

            android:text="@string/time_separator"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            tools:text="@string/zero_time" />

    </LinearLayout>
</LinearLayout>