<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.client.Login">

    <LinearLayout
        android:id="@+id/linearLayout_input_fields_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/base_elements_margin"

        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:id="@+id/textView_header"
            style="@style/headerText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/photograph_signup" />

        <LinearLayout
            android:id="@+id/linearLayout_input_fields"
            style="@style/fieldsContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:orientation="horizontal">

                <TextView
                    style="@style/standardText.labelForInput"
                    android:layout_width="@dimen/photograph_registration_label_width"

                    android:text="@string/first_name" />

                <EditText
                    style="@style/textField.input"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:autofillHints="name"
                    android:background="@drawable/transparent"

                    android:hint="@string/necessarily"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <View
                android:layout_marginStart="12dp"
                style="@style/fieldSeparator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:orientation="horizontal">

                <TextView
                    style="@style/standardText.labelForInput"
                    android:layout_width="@dimen/photograph_registration_label_width"

                    android:text="@string/last_name" />

                <EditText
                    style="@style/textField.input"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:autofillHints="name"
                    android:background="@drawable/transparent"

                    android:hint="@string/necessarily"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <View
                android:layout_marginStart="12dp"
                style="@style/fieldSeparator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:orientation="horizontal">

                <TextView
                    style="@style/standardText.labelForInput"
                    android:layout_width="@dimen/photograph_registration_label_width"

                    android:text="@string/email" />

                <EditText
                    style="@style/textField.input"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:autofillHints="emailAddress"
                    android:background="@drawable/transparent"

                    android:hint="@string/necessarily"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <View
                android:layout_marginStart="12dp"
                style="@style/fieldSeparator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:orientation="horizontal">

                <TextView
                    style="@style/standardText.labelForInput"
                    android:layout_width="@dimen/photograph_registration_label_width"

                    android:text="@string/password" />

                <EditText
                    style="@style/textField.input"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:autofillHints="password"
                    android:background="@drawable/transparent"

                    android:hint="@string/necessarily"
                    android:inputType="textPassword" />

            </LinearLayout>

            <View
                android:layout_marginStart="12dp"
                style="@style/fieldSeparator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:orientation="horizontal">

                <TextView
                    style="@style/standardText.labelForInput"
                    android:layout_width="@dimen/photograph_registration_label_width"

                    android:text="@string/address" />

                <TextView
                    style="@style/textField.input"

                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/transparent"
                    app:drawableEndCompat="@drawable/ic_keyboard_arrow_right"

                    android:hint="@string/select_address" />

            </LinearLayout>

            <View
                android:layout_marginStart="12dp"
                style="@style/fieldSeparator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:orientation="horizontal">

                <TextView
                    style="@style/standardText.labelForInput"
                    android:layout_width="@dimen/photograph_registration_label_width"

                    android:text="@string/phone" />

                <EditText
                    style="@style/textField.input"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:autofillHints="phone"
                    android:background="@drawable/transparent"

                    android:hint="@string/necessarily"
                    android:inputType="phone" />

            </LinearLayout>

            <View
                android:layout_marginStart="12dp"
                style="@style/fieldSeparator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:orientation="horizontal">

                <TextView
                    style="@style/standardText.labelForInput"
                    android:layout_width="@dimen/photograph_registration_label_width"

                    android:text="@string/days" />

                <TextView
                    style="@style/textField.input"

                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"

                    app:drawableEndCompat="@drawable/ic_keyboard_arrow_right"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/transparent"

                    android:hint="@string/select_working_days" />

            </LinearLayout>

            <View
                android:layout_marginStart="12dp"
                style="@style/fieldSeparator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:orientation="horizontal">

                <TextView
                    style="@style/standardText.labelForInput"
                    android:layout_width="@dimen/photograph_registration_label_width"

                    android:text="@string/experience" />

                <TextView
                    style="@style/textField.input"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"

                    android:background="@drawable/transparent"

                    app:drawableEndCompat="@drawable/ic_keyboard_arrow_bottom"

                    android:text="@string/one_year" />

            </LinearLayout>

            <View
                android:layout_marginStart="12dp"
                style="@style/fieldSeparator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:orientation="horizontal">

                <TextView
                    style="@style/standardText.labelForInput"
                    android:layout_width="@dimen/photograph_registration_label_width"

                    android:text="@string/about_me" />

                <EditText
                    style="@style/textField.input"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/transparent"

                    android:minLines="1"

                    android:hint="@string/write_about_you"
                    android:inputType="text"
                    android:autofillHints="" />

            </LinearLayout>

            <View
                android:layout_marginStart="12dp"
                style="@style/fieldSeparator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:orientation="horizontal">

                <TextView
                    style="@style/standardText.labelForInput"
                    android:layout_width="@dimen/photograph_registration_label_width"

                    android:text="@string/services" />

                <TextView
                    style="@style/textField.input"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingEnd="10dp"
                    android:paddingStart="0dp"

                    app:drawableEndCompat="@drawable/ic_keyboard_arrow_right"

                    android:autofillHints="name"
                    android:background="@drawable/transparent"

                    android:hint="@string/select_services" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/button_login"
        layout="@layout/layout_signup_button"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_input_fields_container"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="@dimen/layout_width_percent_block" />


</androidx.constraintlayout.widget.ConstraintLayout>