<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_card_fields"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingHorizontal="10dp"

    android:background="@drawable/rect_white"

    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="16dp"

        android:text="@string/bank_card"
        style="@style/headerText"

        android:textSize="20sp" />

    <EditText
        style="@style/textField.bankCard"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:singleLine="true"

        android:background="@drawable/rect_light_grey_border"

        android:hint="@string/bank_card_number"
        android:autofillHints="creditCardNumber"

        android:layout_margin="10dp"
        android:inputType="numberDecimal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            style="@style/textField.bankCard"

            android:layout_width="160dp"
            android:layout_height="wrap_content"

            android:background="@drawable/rect_light_grey_border"

            android:layout_alignParentStart="true"

            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"

            android:layout_marginVertical="16dp"

            android:ellipsize="end"

            android:hint="@string/month_and_year"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:autofillHints="creditCardNumber" />

        <EditText
            style="@style/textField.bankCard"

            android:layout_width="160dp"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"

            android:layout_marginStart="10dp"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="10dp"

            android:autofillHints="creditCardNumber"
            android:background="@drawable/rect_light_grey_border"
            android:ellipsize="end"
            android:hint="@string/CVC_CVV"

            android:inputType="numberDecimal"
            android:singleLine="true"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


</LinearLayout>